
=item *

Upgraded HTML::Template for bug fixes (2.91 -> 2.95) [Michael Peters]

=item * 

Fixed bug where sometimes ordering by URL when searching stories changed the results. [Michael Peters]

=item *

Fixed bug where tag information was lost on stories when editting the categories. [Michael Peters]

=back

=head2 3.23 - July 31st, 2013

=over

=item *

Copying a story will now copy the tags. [Michael Peters]

=item *

Bug fix for scheduler crash: Deadlock found when trying to get lock. [Daniel S. Sterling]

=item *

Add run mode for help.pl to email the site administrator (C<BadHelpNotify>) about a missing help topic. [Brad Oaks]

=item *

Fixed a case where swapping story names could prevent files from being cleared when the story is retired. [Brad Oaks]

=item *

Fixed retired or trashed archive stories (having a story_category_link entry) being included for publish. [Brad Oaks]

=item *

Stories and Media skip the extraneous checkout/checkin history entries for (un)trash, (un)retire, and delete actions. [Brad Oaks]

=back

=head2 3.22 - October 18th, 2012

=over

=item *

Added "limit" option to Krang::Widget::autocomplete_values. [Michael Peters]

=item *

Added "Search Full Text?" checkbox on "Find Media" screen just like the
one on "Find Stories" screen. [Michael Peters]

=item *

Fixed bug where "Show Thumbnails" checkbox would become unchecked
on "Find Media" screen when a search was done. [Michael Peters]

=item *

Changed dates on messages about scheduled publishes to be a more user
friendly format [Michael Peters]

=item *

Added "Steal" capability to "Active Templates" screen. [Michael Peters]

=item *

Added "Steal" capability to "Active Media" screen. [Michael Peters]

=item *

Fixed bug where stealing stories from deleted users would result in an
ISE [Michael Peters]

=item *

Fixed bug where changing elements' classes and order at the same
time on Edit Story screens would garble data. [Michael Peters]

=item *
