@@ -22,6 +22,14 @@ Fixed bug where sometimes ordering by URL when searching stories changed the res
 
 Fixed bug where tag information was lost on stories when editting the categories. [Michael Peters]
 
+=item *
+
+Scheduled jobs created after this release record the user_id for use in add_history. [Brad Oaks]
+
+=item *
+
+The history screen will show that an asset is published because of its link to another asset. [Brad Oaks]
+
 =back
 
 =head2 3.23 - July 31st, 2013
